[package]
name = "oxyde_sorting"
version = "1.0.0"
authors = ["DE SMET Enguerrand"]
edition = "2021"

[workspace]
members = ["crates/*"]

[dependencies]
oxyde = {git = 'https://github.com/dsmtE/oxyde', features = ["log", "naga"]}

# nalgebra-glm = { version = "0.18", features = [ "convert-bytemuck" ] }
bytemuck = { version = "1.13", features = [ "derive" ] }

# Overriding repository URL to work with git submodules
[patch."https://github.com/dsmtE/oxyde"]
oxyde = { path = "crates/oxyde" }

[dev-dependencies]
pollster = "0.3.0"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1